fix edw slides on mobile and add tasks icon

--- a/assets/styles/edw.scss
+++ b/assets/styles/edw.scss
@@ -6,7 +6,7 @@
 @import "1-helpers/mixins";
 
 .slide {
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .btn.slide-sel-btn {
